# AI_Robotic_Camera

./: .gitignore  CMakeLists.txt  README.md  stepper_control.c
FYP_P2/: BOM.xlsx  FYP_P2.kicad_pcb  FYP_P2.kicad_prl  FYP_P2.kicad_pro  FYP_P2.kicad_sch  fp-lib-table  sym-lib-table  untitled.kicad_sch  ~FYP_P2.kicad_sch.lck
FYP_P2_1/: FYP_P2_1.hyp  FYP_P2_1.kicad_pcb  FYP_P2_1.kicad_prl  FYP_P2_1.kicad_pro  FYP_P2_1.kicad_sch  FYP_P2_1.step  fp-info-cache  fp-lib-table  sym-lib-table  ~FYP_P2_1.kicad_sch.lck
FYP_P2_1/FYP_P2_1/: FYP_P2_1.kicad_prl  FYP_P2_1.kicad_pro
PCB/: FYP_P2_1.kicad_sch  diagram
PCB/FYP_P2_1/: BTT TMC2209-V1.2.STEP  FYP_P2_1.hyp  FYP_P2_1.kicad_pcb  FYP_P2_1.kicad_prl  FYP_P2_1.kicad_pro  FYP_P2_1.kicad_sch  FYP_P2_1.step  fp-info-cache  fp-lib-table  pcb_19_07.SLDPRT  pcb_19_07.step  sym-lib-table
PCB/FYP_P2_1/FYP_P2_1/: FYP_P2_1.kicad_prl  FYP_P2_1.kicad_pro
PCB/FYP_P2_1/FYP_P2_1_Fab/: FYP_P2_1-B_Cu.gbr  FYP_P2_1-B_Mask.gbr  FYP_P2_1-B_Paste.gbr  FYP_P2_1-B_Silkscreen.gbr  FYP_P2_1-Edge_Cuts.gbr  FYP_P2_1-F_Cu.gbr  FYP_P2_1-F_Mask.gbr  FYP_P2_1-F_Paste.gbr  FYP_P2_1-F_Silkscreen.gbr  FYP_P2_1-In1_Cu.gbr  FYP_P2_1-In2_Cu.gbr  FYP_P2_1-NPTH.drl  FYP_P2_1-PTH.drl  FYP_P2_1-job.gbrjob
PCB/FYP_P2_2/: FYP_2_2_PWR.kicad_sch  FYP_P2_2-Joel’s MacBook Air.kicad_prl  FYP_P2_2-NPTH.drl  FYP_P2_2-PTH.drl  FYP_P2_2.kicad_pcb  FYP_P2_2.kicad_prl  FYP_P2_2.kicad_pro  FYP_P2_2.kicad_sch  FYP_P2_2_BOM.csv  FYP_P2_2_CONN.kicad_sch  FYP_P2_2_CONN.kicad_sch-bak  FYP_P2_2_TMC2209.kicad_sch  fp-info-cache  fp-info-cache-Joels_PC  fp-lib-table  sym-lib-table  tc2-main.pcb.FCStd  ~FYP_P2_2.kicad_pcb-Joel’s MacBook Air.lck  ~FYP_P2_2.kicad_sch-Joels_PC.lck
PCB/FYP_P2_2/bom/: ibom.html
RaspberryPi/: .goreleaser.yml  go.mod  go.sum  test.go
RaspberryPi/pico_camera_interface/: pico_camera_interface_main.go
RaspberryPi/thermal_camera_sim/: thermal_camera_sim_main.go
components_models/L6981/: 2024-05-03_02-52-44.kicad_sym
components_models/TMC2209_BOB/: TMC2209.kicad_sym
scr/: PWM.c  PWM.h  battery_monitor.c  battery_monitor.h  blink.c  blink.h  common.c  common.h  finite_state_machine.c  finite_state_machine.h  imu.c  imu.h  main.c  rangefinder.c  rangefinder.h  scheduler.c  scheduler.h  stepper_control.c  stepper_control.h  target.h  target_v2.h  tick.c  tick.h  tmc2209.c  tmc2209.h
(+115 files in other folders)
